--- a/src/container/Alert/Alert.css
+++ b/src/container/Alert/Alert.css
@@ -1,15 +1,23 @@
 .myAlert-top{
     position: fixed;
-    top: 5px; 
-    left:2%;
+    top: 75px;
+    left: 2%;
     width: 96%;
+    z-index: 1;
+    border-radius: 10px;
+    padding: 15px;
+    border: 3px solid seagreen;
 }
 
 .myAlert-bottom{
     position: fixed;
-    bottom: 5px;
-    left:2%;
+    top: 75px;
+    left: 2%;
     width: 96%;
+    z-index: 1;
+    border-radius: 10px;
+    padding: 15px;
+    border: 3px solid indianred;
 }
 
 .alert{
